src/objects/TariffPlan__c.object
<CustomObject>
    <description>Details about tariff plans</description>
    <fields>
        <fullName>Contact_no__c</fullName>
        <description>Contact number</description>
        <externalId>true</externalId>
        <label>Contact no</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <label>Network</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_no__c</fullName>
        <description>Serial numbers for mobile numbers</description>
        <label>S no</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>TariffPlanSummary__c</fullName>
        <label>TariffPlanSummary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tariffplan__c</fullName>
        <description>Tariff plan name</description>
        <label>Tariffplan</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>TariffPlan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TariffPlan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TariffPlans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>